--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^7.3",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.2",
+        "laravel/framework": "^8.83.3",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7"
     },
@@ -18,9 +18,8 @@
         "laravel/sail": "^1.0.1",
         "laravel/ui": "^3.4",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^5.11.0",
+        "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
         "psr-4": {
